--- a/DawidProject/Assembly-CSharp.csproj
+++ b/DawidProject/Assembly-CSharp.csproj
@@ -62,6 +62,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BulletScript.cs" />
+    <Compile Include="Assets\IsGrounded.cs" />
     <Compile Include="Assets\Object pooling lekcja\FloatingInUniverse.cs" />
     <Compile Include="Assets\Object pooling lekcja\Object pooling.cs" />
     <Compile Include="Assets\Scripts\AttackVortexBlueCap.cs" />
@@ -104,7 +106,6 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
-    <Compile Include="Assets\bulletScript.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
